# business-management-system

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.basic.yaml  docker-compose.yaml  lint.py  pyproject.toml  req_handler.py  requirements.dev.txt  requirements.txt  requirements_dev.txt  update_requirements.sh
nginx/: default.conf
postgres/: postgresql.conf
project/: config.py  constants.py  main.py  route_collector.py
project/app_admin/: admin_collector.py  auth_back.py  constants.py  create_master.py  formatters.py
project/app_admin/models/: app_auth.py  app_org.py
project/app_auth/: config.py
project/app_auth/application/: interfaces.py  schemas.py  security.py  services.py
project/app_auth/domain/: exceptions.py  exeptions.py  models.py
project/app_auth/infrastructure/: repositories.py  security.py  unit_of_work.py
project/app_auth/presentation/: dependencies.py  exceptions.py
project/app_org/application/: enums.py  interfaces.py  schemas.py
project/app_org/domain/: exceptions.py  models.py
project/app_org/infrastructure/: repos.py  unit_of_work.py
project/app_org/presentation/: dependencies.py  exceptions.py
project/app_team/application/: enums.py  interfaces.py  schemas.py
project/app_team/domain/: exceptions.py  models.py
project/app_team/infrastructure/: repos.py  unit_of_work.py
project/app_team/presentation/: dependencies.py  exceptions.py
project/background/: celery_app.py  tasks.py
project/core/: constants.py  exc_handlers.py  exceptions.py  interfaces.py  log_config.py  schemas.py  service.py  unit_of_work.py
project/core/db/: base.py  config.py  setup.py  utils.py
project/migrations/: env.py
project/migrations/versions/: 01df215017c9_user_command_relation.py  23fb28b6b115_user_profile.py  35596e55ce51_role_to_command.py  6394d9b2783a_app_auth_app_org_models.py  64cde6d8cb01_drop_partner.py  64dec19a5b8d_app_org_models_is_active_field.py  64e4bea1ec3d_meeting_calendar.py  6a3f7fa5f472_calendar_event_is_active.py  (+3 more)
redis/: entrypoint.sh  redis.conf.template  users.acl.template
src/: config.py  main.py
src/db/: models.py
src/migrations/: env.py
tests/: conftest.py  helpers.py  setup_teardown_db.py
tests/app_auth/: conftest.py  test_api_auth.py  test_auth_service.py  test_services.py  test_user_service.py
tests/app_org/: conftest.py
tests/app_team/: conftest.py
tests/core/: test_service.py
tests/utils/: confs.py  setup_db.py
(+40 files in other folders)
